[tool.poetry]
name = "isl"
version = "0.1.0"
description = ""
authors = ["Ezra Citron <ezracitron@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.13.0"
numpy = "^1.22.3"
pandas = "^1.4.2"
seaborn = "^0.11.2"
plotnine = "^0.8.0"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
